--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="main.js" async />
   </head>
-  <body></body>
+  <body>
+    <h1>My Portfolio</h1>
+  </body>
 </html>
