--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="main.js" async />
   </head>
   <body>
-    <h1>My Portfolio</h1>
+    <h1 class="MyPortfolio">My Portfolio</h1>
   </body>
 </html>
