--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="main.js" async />
+    <title>MyPortfolio</title>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.js" async />
   </head>
   <body>
     <h1 class="MyPortfolio">My Portfolio</h1>
+    <a target="blank_" href="rezepte.html">Rezepte</a>
   </body>
 </html>
