--- a/index/exercises/exercises.html
+++ b/index/exercises/exercises.html
@@ -12,49 +12,6 @@
     <br />
     <a href="/index/exercises/lesson1/lesson1.html">Lesson 1 / Lektion 1</a>
     <br />
-    <a class="AmazonLink" href="https://www.amazon.de" target="blank_"
-      >Back to Amazon</a
-    >
-    <p class="NikeBlackLine">Nike Black Running Shoes</p>
-    <p class="PriceLine">$ 39 - in stock.</p>
-    <p>Free delivery tomorrow.</p>
-    <button class="AmazonButton">Add to Cart</button>
-    <button class="BuyNow">Buy now</button> <br />
-    <button class="UberButton">Request now</button> <br />
-    <button class="GitHubButton">Sign up</button> <br />
-    <button class="BootstrapButton1">Get started</button>
-    <button class="BootstrapButtonDownload2">Download</button> <br />
-    <button class="LinkedinButton1">Apply on company website</button>
-    <button class="LinkedinButton2">Save</button>
-    <br />
-    <br />
-    <button class="BackAndNextButton">Back</button>
-    <a class="NumberLinks" href="">1</a>
-    <a class="NumberLinks" href="">2</a>
-    <a class="NumberLinks" href="">3</a>
-    <a class="NumberLinks" href="">4</a>
-    <a class="NumberLinks" href="">5</a>
-    <button class="BackAndNextButton">Next</button>
-    <br />
-    <br />
-    <button class="StretchButton">Stretch</button>
-    <br />
-    <br />
-    <button class="ShadowButton">Shadow</button>
-    <br />
-    <br />
-    <button class="OneTwoThreeButton">One</button> <br />
-    <button class="OneTwoThreeButton">Two</button> <br />
-    <button class="OneTwoThreeButton">Three</button> <br />
-    <br />
-    <br />
-    <br />
-    <p class="Tahoma">This is Tahoma Font</p>
-    <p class="title">Biggest Deals of the Year!</p>
-    <p class="sale">Sales end Tuesday</p>
-    <br />
-    <br />
-    <p>HTML CSS Course</p>
-    <p>Beginner to Pro</p>
+    <a href="/index/exercises/lesson2/lesson2.html">Lesson 2 / Lektion 2</a>
   </body>
 </html>
