--- a/index/exercises/lesson1/lesson1.html
+++ b/index/exercises/lesson1/lesson1.html
@@ -20,5 +20,12 @@
         Today i´ve been started the Web-Development Basics HTML/CSS <br />
       </span>
     </p>
+    <a href="https://www.google.de" target="blank_">Google</a>
+    <a href="https://www.amazon.de" target="blank_">Amazon</a>
+    <p>Nike Black Running Shoes</p>
+    <p>$39 - in stock.</p>
+    <p>Free delivery tomorrow.</p>
+    <button>Add to Cart</button>
+    <button>Buy now</button>
   </body>
 </html>
