--- a/index/exercises/exercises.html
+++ b/index/exercises/exercises.html
@@ -8,10 +8,10 @@
     <a href="/index/index.html">HOME</a>
   </head>
   <body>
-    <h1>Exercises</h1>
+    <h1>Exercises and Courses</h1>
+    <a href="/index/exercises/HTMLCSS/HTMLCSSCOURSE.html">HTML & CSS</a>
     <br />
-    <a href="/index/exercises/lesson1/lesson1.html">Lesson 1 / Lektion 1</a>
     <br />
-    <a href="/index/exercises/lesson2/lesson2.html">Lesson 2 / Lektion 2</a>
+    <a href="">Javascript</a>
   </body>
 </html>
