--- a/index/index.html
+++ b/index/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 class="MyPortfolio">My Portfolio</h1>
-    <a href="/index/exercises/exercises.html">Exercises</a> <br />
+    <a href="/index/exercises/exercises.html">Exercises and Courses</a> <br />
     <a href="/index/Rezepte/rezepte.html">Rezepte</a> <br />
     <a href="/index/vokabeltrainer/vokabeltrainer.html">Vokabeltrainer</a>
     <br />
