--- a/Project/Web-Development Courses/HTMLuCSS/Lesson1/Lesson1.html
+++ b/Project/Web-Development Courses/HTMLuCSS/Lesson1/Lesson1.html
@@ -6,6 +6,10 @@
     <title>Lesson 1</title>
   </head>
   <body>
+    <a href="/Project/MyPortfolio-Index/index.html">HOME</a>
+    <a href="/Project/Web-Development Courses/HTMLuCSS/HTMLCSSindex.html"
+      >Lessons</a
+    >
     <h1>Lesson 1 HTML-Basics</h1>
     <button>Click</button>
     <br />
