--- a/Project/Web-Development Courses/WebDevCoursesIndex.html
+++ b/Project/Web-Development Courses/WebDevCoursesIndex.html
@@ -8,7 +8,7 @@
   <body>
     <a href="/Project/MyPortfolio-Index/index.html">Home</a>
     <h1>Web - Development - Courses</h1>
-    <a href="/Project/Web-Development Courses/Lesson1/Lesson1.html"
+    <a href="/Project/Web-Development Courses/HTMLuCSS/HTMLCSSindex.html"
       >HTML & CSS</a
     >
     <br />
