--- a/Project/Web-Development Courses/HTMLuCSS/Lesson2/Lesson2.html
+++ b/Project/Web-Development Courses/HTMLuCSS/Lesson2/Lesson2.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lesson 2</title>
+    <link
+      rel="stylesheet"
+      href="/Project/Web-Development Courses/HTMLuCSS/Lesson2/Lesson2.css"
+    />
   </head>
   <body>
     <h1>Lesson 2 CSS-Basics</h1>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
+    <button class="Uber-Button">Request now</button> <br />
+    <button class="Amazon-Button">Add to Cart</button> <br />
+    <button class="GitHub-Button">Sign up</button> <br />
+    <button class="Bootstrap-GetStarted-Button">Get started</button>
+    <button class="Bootstrap-Download-Button">Download</button> <br />
+    <button class="Linkedin-Apply-Button">Apply on company website</button>
+    <button class="Linkedin-Save-Button">Save</button>
   </body>
 </html>
